@@ -1,11 +1,11 @@
 if(!file.exists("../windows/opencv/include/opencv4/opencv2/opencv.hpp")){
   unlink("../windows", recursive = TRUE)
   url <- if(grepl("aarch", R.version$platform)){
-    "https://github.com/r-windows/bundles/releases/download/opencv-4.8.0/opencv-4.8.0-clang-aarch64.tar.xz"
+    "https://github.com/r-windows/bundles/releases/download/opencv-4.8.1/opencv-4.8.1-clang-aarch64.tar.xz"
   } else if(grepl("clang", Sys.getenv('R_COMPILED_BY'))){
-    "https://github.com/r-windows/bundles/releases/download/opencv-4.8.0/opencv-4.8.0-clang-x86_64.tar.xz"
+    "https://github.com/r-windows/bundles/releases/download/opencv-4.8.1/opencv-4.8.1-clang-x86_64.tar.xz"
   } else if(getRversion() >= "4.3") {
-    "https://github.com/r-windows/bundles/releases/download/opencv-4.8.0/opencv-4.8.0-ucrt-x86_64.tar.xz"
+    "https://github.com/r-windows/bundles/releases/download/opencv-4.8.1/opencv-4.8.1-ucrt-x86_64.tar.xz"
   } else {
     "https://github.com/rwinlib/opencv/archive/refs/tags/4.8.0-1.tar.gz"
   }
